# SyncDreamer

./: .gitignore  LICENSE  README.md  blender_script.py  eval_colmap.py  eval_mesh.py  eval_nvs.py  foreground_segment.py  generate.py  index.html  pyproject.toml  render_batch.py  requirements.txt  testset_parameters.sh  train_renderer.py  train_syncdreamer.py
configs/: nerf.yaml  neus.yaml  syncdreamer-train.yaml  syncdreamer.yaml
eval_examples/chicken-mesh/: metadata.pbtxt  model.config  model.sdf
eval_examples/chicken-mesh/meshes/: model.mtl
ldm/: base_utils.py  util.py
ldm/data/: sync_dreamer.py
ldm/models/diffusion/: sync_dreamer.py  sync_dreamer_attention.py
ldm/modules/: attention.py
ldm/modules/diffusionmodules/: openaimodel.py
ldm/modules/encoders/: modules.py
meta_info/: camera-16.pkl
renderer/: agg_net.py  cost_reg_net.py  dummy_dataset.py  feature_net.py  neus_networks.py  ngp_renderer.py  renderer.py
tests/: conftest.py  test_setup_validation.py
